[gd_scene load_steps=2 format=3 uid="uid://bie2pjul8rsmp"]

[ext_resource type="Script" path="res://scenes/environment/spawn_manager.gd" id="1_3l71n"]

[node name="SpawnManager" type="Node2D"]
script = ExtResource("1_3l71n")
spawn_period = 0.1

[node name="SpawnTimer" type="Timer" parent="."]
autostart = true

[node name="RestTimer" type="Timer" parent="."]

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
